--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,9 @@ categories = [
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.dev]
+opt-level = 3
+
 [dependencies]
 nanorand = "*"
+bmp = "0.5.0"
